fix(windows): wrong colors and font size

--- a/css/windows.css
+++ b/css/windows.css
@@ -70,10 +70,10 @@
 }
 
 body{
-	background-color: #0264b7;
-	color: white;
+        background: radial-gradient(circle, #afc7e1, #90c5e8);
+	color: rgb(19, 8, 119);
 	font-family: 'Segoe';
-	font-size: 2em;
+	font-size: 1em;
 	margin: 0;
 	padding: 0;
 }
@@ -84,8 +84,8 @@ footer{
 	margin: 0;
 	padding: 15px;
 	text-align: center;
-
 }
+
 nav a{
 	text-decoration: none;
 	color: whitesmoke;
@@ -112,7 +112,6 @@ nav a:hover {
 	display : flex;
 	align-items: center;
 	justify-content: center;
-
 }
 
 #navigation img{
